# OpenGlossary

./: .dockerignore  .gitignore  app.py  config.template.json  pyproject.toml  readme.md
docker/: Dockerfile  docker-compose.yaml
open_glossary/: __init__.py  cli.py  context.py  gunicorn_conf.py
open_glossary/blueprints/glossary/: __init__.py  views.py
open_glossary/blueprints/page/: __init__.py  views.py
open_glossary/database/: __init__.py  entry.py  page.py  parser.py
open_glossary/static/css/: _style.css  style.css  style.scss
open_glossary/templates/: 404.html
open_glossary/templates/glossary/: details.html  macros.html  overview.html
open_glossary/templates/page/: page.html
open_glossary/templates/partials/: base.html  footer.html  head.html  header.html
